--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ gunicorn==20.0.4
 ipywidgets==7.6.3
 matplotlib==3.3.4
 pandas-datareader==0.9.0
-git://github.com/briantacderan/hoodflex.git#egg=hoodflex
+-e git://github.com/briantacderan/hoodflex.git#egg=hoodflex
