--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ hoodflex = {editable = true, git = "git://github.com/briantacderan/hoodflex.git"
 robin-stocks = "==2.0.3"
 Flask-SQLAlchemy = "==2.4.4"
 Flask-WTF = "==0.14.3"
+flask-login = "*"
+blinker = "*"
 
 [requires]
 python_version = "3.8"
