--- a/Pipfile
+++ b/Pipfile
@@ -6,14 +6,14 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-fuckit = "==4.8.1"
-gunicorn = "==20.0.4"
-hoodflex = {editable = true, git = "git://github.com/briantacderan/hoodflex.git"}
-robin-stocks = "==2.0.3"
-Flask-SQLAlchemy = "==2.4.4"
-Flask-WTF = "==0.14.3"
-flask-login = "*"
 blinker = "*"
+fuckit = "*"
+gunicorn = "*"
+hoodflex = {editable = true, git = "git://github.com/briantacderan/hoodflex.git"}
+robin-stocks = "*"
+Flask-Login = "*"
+Flask-SQLAlchemy = "*"
+Flask-WTF = "*"
 
 [requires]
 python_version = "3.8"
