--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ robin-stocks = "*"
 Flask-Login = "*"
 Flask-SQLAlchemy = "*"
 Flask-WTF = "*"
+email-validator = "*"
 
 [requires]
 python_version = "3.8"
