--- a/Pipfile
+++ b/Pipfile
@@ -4,16 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-blinker = "*"
-email-validator = "*"
-fuckit = "*"
-gunicorn = "*"
+blinker = "==1.4"
+email-validator = "==1.1.3"
+fuckit = "==4.8.1"
+gunicorn = "==20.1.0"
 hoodflex = {editable = true, git = "git://github.com/briantacderan/hoodflex.git"}
-robin-stocks = "*"
-Flask-Cors = "*"
-Flask-Login = "*"
-Flask-SQLAlchemy = "*"
-Flask-WTF = "*"
+robin-stocks = "==2.0.4"
+Flask-Cors = "==3.0.10"
+Flask-Login = "==0.5.0"
+Flask-SQLAlchemy = "==2.5.1"
+Flask-WTF = "==0.15.1"
 
 [dev-packages]
 
